[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://montserrat_eb_48.tres" type="DynamicFont" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -120.0
margin_right = 315.0
margin_bottom = 120.0

[node name="Title2" type="Label" parent="VBoxContainer"]
margin_right = 630.0
margin_bottom = 52.0
mouse_filter = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Lobby"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 630.0
margin_bottom = 118.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 267.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 2 )
text = "Your name: "

[node name="TextField" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 271.0
margin_right = 630.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )

[node name="JoinButton" type="Button" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 630.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Join"

[node name="CreateButton" type="Button" parent="VBoxContainer"]
margin_top = 184.0
margin_right = 630.0
margin_bottom = 242.0
custom_fonts/font = ExtResource( 2 )
text = "Create"

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/TextField" to="." method="_on_TextField_text_changed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
